<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:title="@string/app_name"
        app:titleTextColor="@color/teal_700" />

    <Button
        android:id="@+id/bt_menu_loan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/loan_menu"
        android:layout_margin="@dimen/half_padding"
        android:textColor="@color/teal_700"/>

    <Button
        android:id="@+id/bt_menu_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/return_menu"
        android:layout_margin="@dimen/half_padding"
        android:textColor="@color/teal_700"/>

    <Button
        android:id="@+id/bt_menu_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/client_menu"
        android:layout_margin="@dimen/half_padding"
        android:textColor="@color/teal_700"/>


    <Button
        android:id="@+id/bt_menu_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/book_menu"
        android:layout_margin="@dimen/half_padding"
        android:textColor="@color/teal_700"/>

    <Button
        android:id="@+id/bt_menu_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/about_menu"
        android:layout_margin="@dimen/half_padding"
        android:textColor="@color/teal_700"/>



    </androidx.appcompat.widget.LinearLayoutCompat>